--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1827,7 +1827,7 @@
 				padding: 8em 0 8em 0;
 				text-align: center;
 			}
-
+            
 				.wrapper.first {
 					padding-top: 12em;
 				}
@@ -1964,6 +1964,12 @@
 				font-size: 1.25em;
 				margin: 0 0 0.4em 0;
 			}
+  
+
+            
+			.more {
+					display: none;
+				}
 
 			h1 {
 				font-size: 2.25em;
@@ -2104,3 +2110,47 @@
 				}
 
 	} 
+
+
+
+/*  html5 styles*/
+
+ .more {
+			border: none;
+			color: black;
+			font-size: 0.8em;
+			height: 8.5em;
+			left: 50%;
+			letter-spacing: 0.225em;
+			margin-left: -8.5em;
+			opacity: 1;
+			outline: 0;
+			padding-left: 0.225em;
+			position: absolute;
+			text-align: center;
+			text-transform: uppercase;
+			width: 16em;
+			text-decoration: none;
+		}
+        
+        .more a:-webkit-any-link {
+        	cursor:auto;
+        }
+
+        	 .more:after {
+				background-image: url("arrow.svg");
+				background-position: center;
+				background-repeat: no-repeat;
+				background-size: contain;
+				bottom: 4em;
+				content: '';
+				display: block;
+				height: 1.5em;
+				left: 50%;
+				margin: 0 0 0 -0.75em;
+				position: absolute;
+				width: 1.5em;
+				z-index:10000 !important;
+			}
+
+		 
